fixes #97 better. Makes text overflow in thumbnail catalog tables more cultured

--- a/radiopadre/html/radiopadre.css
+++ b/radiopadre/html/radiopadre.css
@@ -81,6 +81,43 @@
   /* background-color: inherit; */
 }
 
+td .rp-thumb-prefix { 
+  border: 0px; 
+  background: #D0D0D0; 
+  text-align: left;
+  min-width: 1em;
+  max-width: 3em; 
+}
+
+td .rp-thumb-title {
+  border: 0px; 
+  background: #D0D0D0; 
+  text-align: center; 
+  text-overflow: clip;
+  /* white-space: nowrap; */
+  overflow: hidden;
+  width: 100%
+}
+
+.rp-item-header {
+  white-space: nowrap;
+  display: inline-block;
+}
+.rp-filelist-path {
+  white-space: nowrap;
+  display: inline-block;
+  font-family: monospace;
+  font-weight: normal; 
+}
+.rp-filelist-title {
+  white-space: nowrap;
+  display: inline-block;
+}
+.rp-filelist-subset {
+  white-space: nowrap;
+  display: inline-block;
+}
+
 .rp-section-bookmarks {
   display: table-row; 
   font-size: 0.8em; 
